[project]
name = "llm-provider-sample"
version = "0.0.5"
description = "Dify LLM provider sample plugin"
requires-python = ">=3.12"
dependencies = [
    "dify-plugin==0.4.5",
    "httpx>=0.28.1,<0.29.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
include-package-data = false
