[project]
name = "llm-provider-sample"
version = "0.1.0"
description = "Dify LLM provider sample plugin"
requires-python = ">=3.13"
dependencies = [
    "dify-plugin>=0.5.0,<0.6.0",
    "openai>=2.3.0,<3.0.0",
    "tiktoken>=0.8.0,<0.9.0",
    "numpy>=2.0.0,<3.0.0",
    "pillow>=10.0.0,<12.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
include-package-data = false
